@@ -15,5 +15,6 @@ public enum UpgradeType {
     ADD_SKILL_TOTAL,
     ADD_UNIQUE_PLAYER_DATA,
     FIX_SPELLING_NETHERITE_SALVAGE,
-    FIX_SPELLING_NETHERITE_REPAIR
+    FIX_SPELLING_NETHERITE_REPAIR,
+    FIX_NETHERITE_SALVAGE_QUANTITIES
 }
