@@ -9,3 +9,4 @@ Upgrades_Finished:
     ADD_ALCHEMY: false
     FIX_SPELLING_NETHERITE_SALVAGE: false
     FIX_SPELLING_NETHERITE_REPAIR: false
+    FIX_NETHERITE_SALVAGE_QUANTITIES: false
